CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_C_COMPILER gcc)

PROJECT(YU_SHAN_FANG VERSION 1.0)

SET(EXECUTABLE_NAME "yuShanFang")

SET(ROOT_PATH $ENV{ROOT_PATH})

ADD_DEFINITIONS(-DSUPPORT_SQILTE3)

#ADD_COMPILE_DEFINITIONS(SUPPORT_SQILTE3)

INCLUDE_DIRECTORIES(${ROOT_PATH}/inc)
INCLUDE_DIRECTORIES(${ROOT_PATH}/inc/shell)
INCLUDE_DIRECTORIES(${ROOT_PATH}/inc/drugMgt)
INCLUDE_DIRECTORIES(${ROOT_PATH}/inc/storage)
INCLUDE_DIRECTORIES(${ROOT_PATH}/inc/sqlite3)
INCLUDE_DIRECTORIES(${ROOT_PATH}/inc/mail)
INCLUDE_DIRECTORIES(${ROOT_PATH}/inc/base64)

AUX_SOURCE_DIRECTORY(${ROOT_PATH}/src SOURCES)
AUX_SOURCE_DIRECTORY(${ROOT_PATH}/src/shell SOURCES)
AUX_SOURCE_DIRECTORY(${ROOT_PATH}/src/drugMgt SOURCES)
AUX_SOURCE_DIRECTORY(${ROOT_PATH}/src/storage SOURCES)
AUX_SOURCE_DIRECTORY(${ROOT_PATH}/src/mail SOURCES)
AUX_SOURCE_DIRECTORY(${ROOT_PATH}/src/base64 SOURCES)


ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES})

LINK_DIRECTORIES(${ROOT_PATH}/lib)

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} -lrt -lpthread -lsqlite3 -lssl -lcrypto -lm)

INSTALL(TARGETS ${EXECUTABLE_NAME} RUNTIME DESTINATION ${ROOT_PATH}/bin)